Related tdf#146909: add missing IDIGNORE in Basic

Change-Id: Idbbceb2f5375d47c942bab70ce81f7be79b17478
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128780
(cherry picked from commit c1205c1cf6e08d94e6e2e2753679d99bc1842ca0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128685
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>